force-app/main/default/objects/Margin__c/Margin__c.object-meta.xml
<CustomObject>
    <description>Object intended for registering margins</description>
    <label>Margin Table</label>
    <nameField>
        <label>Margim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Margins Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>