force-app/main/default/objects/Margin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account of the margin</description>
    <inlineHelpText>choose a account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <type>Lookup</type>
</CustomField>