force-app/main/default/objects/Margin__c/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>group op account</description>
    <inlineHelpText>choose a Account Group</inlineHelpText>
    <label>Account Group</label>
    <referenceTo>AccountGroup__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>