force-app/main/default/objects/Margin__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>city of margin</description>
    <inlineHelpText>choose a city</inlineHelpText>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <type>Lookup</type>
</CustomField>