force-app/main/default/objects/Margin__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>Choose the type of the client</description>
    <inlineHelpText>Choose on the picklist the client type</inlineHelpText>
    <label>Client Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clients_Type</valueSetName>
    </valueSet>
</CustomField>