force-app/main/default/objects/Margin__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Country of margin</description>
    <inlineHelpText>choose country</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <type>Lookup</type>
</CustomField>