force-app/main/default/objects/Margin__c/fields/Destiny_State__c.field-meta.xml
<CustomField>
    <fullName>Destiny_State__c</fullName>
    <description>Where is the destinty state of it</description>
    <inlineHelpText>Choose the destiny state from the picklist</inlineHelpText>
    <label>Destiny State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destiny_State</valueSetName>
    </valueSet>
</CustomField>