force-app/main/default/objects/Margin__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Distribution center of margin</description>
    <inlineHelpText>Choose a distribution center</inlineHelpText>
    <label>Distribution Center</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>