force-app/main/default/objects/Margin__c/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <description>how much is the margin percentage</description>
    <inlineHelpText>write how much is the margin percentage</inlineHelpText>
    <label>Margin Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>