force-app/main/default/objects/Margin__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Hierarchy in magirn</description>
    <inlineHelpText>Choose a Product Hierarchy</inlineHelpText>
    <label>Product Hierarchy</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <type>Lookup</type>
</CustomField>