force-app/main/default/objects/Margin__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>State of the margin</description>
    <inlineHelpText>choose a margin state</inlineHelpText>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Margins Table</relationshipLabel>
    <relationshipName>Margins_Table</relationshipName>
    <type>Lookup</type>
</CustomField>