force-app/main/default/objects/Margin__c/fields/State_Origin__c.field-meta.xml
<CustomField>
    <fullName>State_Origin__c</fullName>
    <description>Where does it come from</description>
    <inlineHelpText>Choose on the pick list where it comes from</inlineHelpText>
    <label>State Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_State</valueSetName>
    </valueSet>
</CustomField>