force-app/main/default/objects/Margin__c/validationRules/Account_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Rule</fullName>
    <active>true</active>
    <description>You must select at least on account group or a account</description>
    <errorConditionFormula>OR(
    AND(ISBLANK( Account__c ), NOT(ISBLANK(AccountGroup__c))),
    AND(NOT(ISBLANK(Account__c)), ISBLANK(AccountGroup__c)),
    AND(ISBLANK(Account__c),ISBLANK(AccountGroup__c))
)</errorConditionFormula>
    <errorMessage>A account or a account group must be selected, but one at a time</errorMessage>
</ValidationRule>