force-app/main/default/objects/Margin__c/validationRules/Address_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Rule</fullName>
    <active>true</active>
    <description>A part of the address needs to be selected</description>
    <errorConditionFormula>NOT(
    OR(
        /* Exatamente 1 preenchido */
        AND(NOT(ISBLANK(City__c)), ISBLANK(State__c),      ISBLANK(Country__c)),
        AND(ISBLANK(City__c), NOT(ISBLANK(State__c)), ISBLANK(Country__c)),
        AND(ISBLANK(City__c), ISBLANK(State__c), NOT(ISBLANK(Country__c)))
    )
)</errorConditionFormula>
    <errorMessage>Only one address part must be selected and one must be select</errorMessage>
</ValidationRule>