force-app/main/default/objects/Margin__c/validationRules/Product_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Rule</fullName>
    <active>true</active>
    <description>Account cant be null</description>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(ProductHierarchy__c)), NOT (ISBLANK(Product__c))),
    AND(ISBLANK(ProductHierarchy__c),ISBLANK(Product__c))
)</errorConditionFormula>
    <errorMessage>You need to select a product hierarchy or a product and only one at time</errorMessage>
</ValidationRule>