force-app/main/default/objects/Margin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Product__c</columns>
    <columns>ProductHierarchy__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>Account__c</columns>
    <columns>AccountGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>