force-app/main/default/objects/Margin__c/listViews/IndustryMargin.listView-meta.xml
<ListView>
    <fullName>IndustryMargin</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Industry Margin</label>
</ListView>