force-app/main/default/objects/Margin__c/listViews/RetailMargin.listView-meta.xml
<ListView>
    <fullName>RetailMargin</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Client_Type__c</field>
        <operation>equals</operation>
        <value>retail</value>
    </filters>
    <label>Retail Margin</label>
</ListView>