force-app/main/default/objects/Margin__c/listViews/ServiceMargin.listView-meta.xml
<ListView>
    <fullName>ServiceMargin</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Service Margin</label>
</ListView>