force-app/main/default/objects/Margin__c/listViews/WholesaleMargin.listView-meta.xml
<ListView>
    <fullName>WholesaleMargin</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Wholesale Margin</label>
</ListView>